--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@svgr/webpack": "^6.2.1",
     "next": "12.1.0",
     "react": "17.0.2",
+    "react-countup": "^6.1.1",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-switch": "^6.0.0",
