--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
   },
   "dependencies": {
     "@svgr/webpack": "^6.2.1",
+    "@types/recharts": "^1.8.23",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-countup": "^6.1.1",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-switch": "^6.0.0",
+    "recharts": "^2.1.9",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
